# tcnursing

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: azure-static-web-apps-thankful-ground-067531100.yml  backend.yml  ci-cd.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: database.py  main.py
backend/app/core/: auth.py  config.py
backend/app/crud/: gallery.py  staff_crud.py
backend/app/models/: __init__.py  about.py  admin.py  admission.py  contact.py  course.py  news.py  page.py  staff.py  success_story.py
backend/app/routes/: about.py  admission.py  auth.py  contact.py  contact_info.py  courses.py  gallery.py  news.py  pages.py  staff_routes.py  success_stories.py
backend/app/schemas/: __init__.py  gallery.py  news.py  page.py  staff_schema.py  success_story.py
frontend/: .env.production  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  popup.html  staticwebapp.config.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/app/: routes.tsx
frontend/src/components/About/: About.scss  About.tsx
frontend/src/components/CampusFacilities/: CampusFacilities.scss  CampusFacilities.tsx
frontend/src/components/CoursesHome/: CoursesHome.scss  CoursesHome.tsx
frontend/src/components/Hero/: Hero.scss  Hero.tsx
frontend/src/components/common/: Footer.scss  Footer.tsx  Navbar.scss  Navbar.tsx
frontend/src/services/: fetchClient.ts  galleryService.ts  newsService.ts  pages.api.ts
frontend/src/styles/: _globals.scss  _variables.scss  main.scss
(+58 files in other folders)
